# qiandu

./: .clangd  .gitignore  AGENTS.md  README.md  build-profile.json5  manual-ohpm-install.bat  oh-package-lock.json5  oh-package.json5  skill.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  NativePdfParser.cpp  NativePdfParser.h  NativeZipUtils.cpp  NativeZipUtils.h  cbz_parser.cpp  cbz_parser.h  chm_parser.cpp  chm_parser.h  djvu_parser.cpp  djvu_parser.h  libentry.cpp  native_cbz_parser.cpp  native_chm.cpp  native_djvu.cpp  native_format_converter.cpp  native_image.cpp  native_image.h  native_ocr.cpp  native_ocr.h  native_pdf.cpp  native_pdf.h
entry/src/main/cpp/imagekit/: image_crop.cpp  image_crop.h  image_decode.cpp  image_decode.h  image_encode.cpp  image_encode.h  image_metadata.cpp  image_metadata.h  image_resize.cpp  image_resize.h  image_rotate.cpp  image_rotate.h  imagekit_napi.cpp  imagekit_napi.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/types/libimagekit/: index.d.ts  oh-package.json5
entry/src/main/ets/: AppNavigation.ets  index.ets
entry/src/main/ets/common/: index.ets
entry/src/main/ets/components/: AppComponents.ets  BackupRestoreDialog.ets  FontScaleSelector.ets  ImageViewer.ets  PageComponents.ets  PaymentDialog.ets  SearchBar.ets  SmartServicesPanel.ets  TabBar.ets  index.ets
entry/src/main/ets/core/: Constants.ets  index.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/features/: index.ets
entry/src/main/ets/managers/: DeviceManager.ets  FoldableLayoutManager.ets
entry/src/main/ets/models/: AdvancedReading.ets  AuthModels.ets  BookSourceModel.ets  OnlineBookModel.ets  ReadingStats.ets  TodoModel.ets
entry/src/main/ets/pages/: BookDetailPage.ets  BookSourceManagePage.ets  BookmarksPage.ets  ComicReaderPage.ets  DictionaryPage.ets  EnhancedReaderPage.ets  EyeTrackingCalibrationPage.ets  FeaturesPage.ets  FeedbackPage.ets  FolderScannerPage.ets  HelpPage.ets  LoginPage.ets  MainPage.ets  NotesPage.ets  OnlineBookDetailPage.ets  OnlineSearchPage.ets  OnlineSourceMarketPage.ets  PrivacyPolicyPage.ets  ProfilePage.ets  ReadRecordPage.ets  ReaderSettingsPage.ets  ReadingStatsPage.ets  RewardPage.ets  SettingsPage.ets  SkillPage.ets  SourceMarketPage.ets  StatisticsPage.ets  TodoPage.ets  UserAgreementPage.ets  WordBookPage.ets
entry/src/main/ets/parsers/: DocxParser.ets  EbookParserUtils.ets  EpubParser.ets  PdfParser.ets  TxtParser.ets
entry/src/main/ets/services/: index.ets
entry/src/main/ets/store/: AppStore.ets
entry/src/main/ets/utils/: AccountManager.ets  AppTheme.ets  AsyncHelper.ets  BasePreferenceManager.ets  BookContentParser.ets  BookSourceImporter.ets  DebouncedPreferenceWriter.ets  DeviceUtils.ets  DisplayHelper.ets  EbookParser.ets  ErrorHandler.ets  FoldableAdapterManager.ets  FontScaleManager.ets  HarmonyDesignTokens.ets  HttpHelper.ets  I18nManager.ets  LazyDataSource.ets  Logger.ets  NativeModules.ets  NavigationHelper.ets  NavigationTypes.ets  PageStyles.ets  PreferenceManager.ets  ReadingSettingsManager.ets  SecureStorage.ets  ToastHelper.ets  Utils.ets  ZipUtils.ets
entry/src/main/ets/viewmodels/: BookDetailViewModel.ets  BookSourceViewModel.ets  BookViewModel.ets  BookmarksViewModel.ets  ComicReaderViewModel.ets  DictionaryViewModel.ets  EnhancedReaderViewModel.ets  FeaturesViewModel.ets  FeedbackViewModel.ets  FolderScannerViewModel.ets  HelpViewModel.ets  LoginViewModel.ets  MainPageViewModel.ets  NotesViewModel.ets  OnlineBookDetailViewModel.ets  OnlineSearchViewModel.ets  OnlineSourceMarketViewModel.ets  ProfilePageViewModel.ets  ProfileViewModel.ets  ReadRecordViewModel.ets  ReaderSettingsViewModel.ets  ReaderViewModel.ets  ReadingStatsViewModel.ets  RewardViewModel.ets  SettingsPageViewModel.ets  SettingsViewModel.ets  SkillViewModel.ets  SourceMarketViewModel.ets  StatisticsViewModel.ets  TodoViewModel.ets  WordBookViewModel.ets
hvigor/: hvigor-config.json5
(+326 files in other folders)
